# lightning

./: .clang-format  .codespellignore  .codespellrc  .dir-locals.el  .dockerignore  .editorconfig  .envrc  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .msggen.json  .pre-commit-config.yaml  .travis.yml  .version  CHANGELOG.md  Cargo.toml  DEV.md  Dockerfile  HACKING.md  INSTALL.md  LICENSE  Makefile  README.md  SECURITY.md  TODO.md  Taskfile.yml  action.yml  anchor.c  anchor.h  anything.txt  base58.c  base58.h  bitcoin_address.c  bitcoin_address.h  bitcoin_script.c  bitcoin_script.h  bitcoin_tx.c  bitcoin_tx.h  build.py  (+82 more)
cln-grpc/: Cargo.toml  Makefile  README.md  build.rs
cln-grpc-hold/: Cargo.toml  README.md  build.rs
cln-grpc-hold/proto/: acceptinv.py  cancelinv.py  checkinv.py  hodlinv.py  hold.proto  keysend.py  masshodlinv.py  node.proto.bak  payinv.py  primitives.proto
cln-grpc-hold/src/: convert.rs  lib.rs  pb.rs  server.rs  test.rs
cln-grpc/proto/: node.proto  primitives.proto
cln-grpc/src/: convert.rs  lib.rs  pb.rs  serde_convert.rs  server.rs  test.rs
cln-rpc/: Cargo.toml  Makefile  README.md
cln-rpc/examples/: getinfo.rs
cln-rpc/src/: codec.rs  hooks.rs  jsonrpc.rs  lib.rs  model.rs  notifications.rs  primitives.rs  requests.rs  responses.rs  test.rs
cln-rpc/src/requests/: getinfo.rs
cln-rpc/src/responses/: getinfo.rs
contrib/cln-tracer/: README.md  pyproject.toml
contrib/cln-tracer/cln_tracer/: trace.py
contrib/msggen/: .gitignore  Makefile  README.md  pyproject.toml  schema.py
contrib/msggen/examples/: generator_example.py
contrib/msggen/msggen/: __init__.py  __main__.py  checks.py  fsharp.py  grpc.py  model.py  patch.py  rust.py  schema.json
contrib/pyln-client/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
contrib/pyln-client/docs/: api.rst  conf.py  index.rst
contrib/pyln-client/tests/: test_clnutils.py  test_gossmap.py  (+4 more)
contrib/pyln-grpc-proto/: Makefile  README.md  pyproject.toml
contrib/pyln-proto/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
contrib/pyln-testing/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
contrib/pytest-global-fixture/: README.md  pyproject.toml
contrib/pytest-trackflaky/: README.md  pyproject.toml
libwally-core/: .gitignore  .travis.yml  1README  INSTALL  LICENSE  configure.ac
libwally-core/include/: wally_crypto.h
libwally-core/src/: Makefile.am  bip32.c  bip38.c  hmac.c  hmac.h  internal.c  internal.h  mnemonic.h  pbkdf2.c  scrypt.c  wordlist.c  wordlist.h
libwally-core/tools/: autogen.sh  build_python_eggs.sh  cleanup.sh  coverage.sh  swigjavapost.sh  wordlist_cc.py
plugins/: .gitignore  .pay.c.swp  Cargo.toml  Makefile  README.md  autoclean.c  bcli.c  bookkeeper.c  chanbackup.c  channel_hint.c  channel_hint.h  commando.c  establish_onion_path.c  establish_onion_path.h  exposesecret.c  fetchinvoice.c  fetchinvoice.h  fundchannel.c  funder.c  funder_policy.c  funder_policy.h  gen_toronion.c  hsmtools.c  keysend.c  libplugin-pay.c  libplugin-pay.h  libplugin-paymake.c  libplugin-paymake.h  libplugin.c  libplugin.h  multifundchannel.c  offers.c  offers.h  offers_inv_hook.c  offers_inv_hook.h  offers_invreq_hook.c  offers_invreq_hook.h  offers_offer.c  offers_offer.h  offers_proof.c  (+9 more)
plugins/askrene/: Makefile  algorithm.c  algorithm.h  askrene.c  askrene.h  datastore_wire.c  datastore_wire.h  dijkstra.c  dijkstra.h  explain_failure.c  explain_failure.h  flow.c  flow.h  graph.c  graph.h  layer.c  layer.h  mcf.c  mcf.h  priorityqueue.c  priorityqueue.h  queue.h  refine.c  refine.h  reserve.c  reserve.h
plugins/bip353-plugin/: Cargo.toml
plugins/bkpr/: Makefile  README.md  account.c  account.h  account_entry.c  account_entry.h  blockheights.c  blockheights.h  bookkeeper.c  bookkeeper.h  chain_event.c  chain_event.h  channel_event.c  channel_event.h  channelsapy.c  channelsapy.h  db.c  db.h  descriptions.c  descriptions.h  incomestmt.c  incomestmt.h  onchain_fee.c  onchain_fee.h  rebalances.c  rebalances.h  recorder.c  recorder.h  report.c  report.h  sql.c  sql.h
plugins/bwatch/: bwatch.c  bwatch.h  bwatch_interface.c  bwatch_interface.h  bwatch_scanner.c  bwatch_scanner.h  bwatch_store.c  bwatch_store.h  bwatch_wire.csv
plugins/cln-rest/: Cargo.toml
plugins/clnrest/: Makefile  README.md  clnrest  clnrest.py  pyproject.toml  requirements.txt
plugins/clnrest-plugin/: Cargo.toml
plugins/currencyrate-plugin/: Cargo.toml  README.md
plugins/examples/: cln-plugin-reentrant.rs  cln-plugin-startup.rs  cln-subscribe-wildcard.rs
plugins/grpc-plugin/: Cargo.toml  README.md
plugins/grpc-plugin-hodl/: Cargo.toml  README.md
plugins/grpc-plugin-hold/: Cargo.toml  README.md
plugins/hodlinvoice/: Cargo.toml
plugins/holdinvoice/: Cargo.toml
plugins/lsps-plugin/: Cargo.toml
plugins/reckless-plugin/: Cargo.toml  README.md
plugins/renepay/: Makefile  chan_extra.c  chan_extra.h  debug.c  debug.h  dijkstra.c  dijkstra.h  disabledmap.c  disabledmap.h  errorcodes.c  errorcodes.h  failure.c  failure.h  finish.c  finish.h  flow.c  flow.h  heap.h  json.c  json.h  main.c  mcf.c  mcf.h  mods.c  mods.h  parse_json.c  parse_json.h  pay.c  pay.h  pay_flow.c  pay_flow.h  payment.c  payment.h  payment_info.h  payplugin.h  renepay.c  renepay.h  renepayconfig.h  route.c  route.h  (+18 more)
plugins/repeatpay/: Makefile  repeatpay.c
plugins/rest-plugin/: Cargo.toml  Makefile  README.md
plugins/spender/: donateutxo.c  donateutxo.h  fundchannel.c  fundchannel.h  main.c  multifundchannel.c  multifundchannel.h  multiwithdraw.c  multiwithdraw.h  openchannel.c  openchannel.h  splice.c  splice.h
plugins/src/: codec.rs  lib.rs  logging.rs  messages.rs  options.rs
plugins/test/: Makefile  Makefile2  run-decode_guess_type.c  run-funder_policy.c  run-gossmap_guess_node_id.c  run-route-calc.c  run-route-overlong.c
plugins/wss-proxy/: pyproject.toml  requirements.txt  wss-proxy  wss-proxy.py
plugins/wss-proxy-plugin/: Cargo.toml  Makefile
plugins/xpay/: Makefile  listpays.c  listpays.h  xpay.c  xpay.h
(+3980 files in other folders)
