[profile.release]
strip = "debuginfo"

[profile.small]
inherits = "dev"
opt-level = 0
debug = 0
codegen-units = 32

[workspace]
resolver = "3"
package.rust-version = "1.85.0"
members = [
    "cln-rpc",
    "cln-grpc",
    "plugins",
    "plugins/grpc-plugin",
    "plugins/rest-plugin",
    "plugins/lsps-plugin",
    "plugins/wss-proxy-plugin",
    "plugins/bip353-plugin",
    "plugins/currencyrate-plugin",
]

[workspace.dependencies]
cln-rpc = { path = "cln-rpc", version = "0.6.0" }
cln-grpc = { path = "cln-grpc", version = "0.6.0" }
cln-plugin = { path = "plugins", version = "0.6.0" }
