[package]
name = "cln-grpc-hold"
version = "0.1.4"
edition = "2021"
license = "MIT"
description = "Hold Invoices as grpc primitives. Provides the bindings used to expose the API over the network."
homepage = "https://github.com/ElementsProject/lightning/tree/master/cln-grpc-hold"
repository = "https://github.com/ElementsProject/lightning"
# documentation = "https://docs.rs/cln-grpc-hold"

[dependencies]
anyhow = "1.0"
log = "0.4"
# cln-rpc = { path="../cln-rpc/", version = "^0.1" }
cln-rpc = "0.1.3"
tonic = { version = "0.8", features = ["tls", "transport"] }
prost = "0.11"
hex = "0.4.3"
bitcoin = { version = "0.29", features = [ "serde" ] }
lightning-invoice = "0.23"
tokio = { version = "1", default-features = false, features = ["time"] }

[dev-dependencies]
serde_json = "1.0.72"

[build-dependencies]
tonic-build = "0.8"
