[package]
name = "cln-grpc"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "The Core Lightning API as grpc primitives. Provides the bindings used to expose the API over the network."
homepage = "https://github.com/ElementsProject/lightning/tree/master/cln-grpc"
repository = "https://github.com/ElementsProject/lightning"
documentation = "https://docs.rs/cln-grpc"

[dependencies]
anyhow = "1.0"
log = "0.4"
cln-rpc = { path="../cln-rpc/", version = "^0.1" }
tonic = { version = "0.8", features = ["tls", "transport"] }
prost = "0.11"
hex = "0.4.3"
bitcoin = { version = "0.29", features = [ "serde" ] }

[dev-dependencies]
serde_json = "1.0.72"

[build-dependencies]
tonic-build = "0.8"
