[package]
name = "cln-grpc"
version = "0.1.8"
edition = "2021"
license = "MIT"
description = "The Core Lightning API as grpc primitives. Provides the bindings used to expose the API over the network."
homepage = "https://github.com/ElementsProject/lightning/tree/master/cln-grpc"
repository = "https://github.com/ElementsProject/lightning"
documentation = "https://docs.rs/cln-grpc"

[features]
default = []
server = ["cln-rpc"]

[dependencies]
anyhow = "1.0"
log = "0.4"
cln-rpc = { path="../cln-rpc/", version = "^0.1", optional = true }
tonic = { version = "0.8", features = ["tls", "transport"] }
prost = "0.11"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4.3"
bitcoin = { version = "0.30", features = [ "serde" ] }

[dev-dependencies]
serde_json = "1.0.72"
cln-rpc = { path="../cln-rpc/", version = "^0.1" }

[build-dependencies]
tonic-build = "0.8"
