[package]
name = "cln-rpc"
version = "0.1.10"
edition = "2021"
license = "MIT"
description = "An async RPC client for Core Lightning."
homepage = "https://github.com/ElementsProject/lightning/tree/master/cln-rpc"
repository = "https://github.com/ElementsProject/lightning"
documentation = "https://docs.rs/cln-rpc"

[[example]]
name = "cln-rpc-getinfo"
path = "examples/getinfo.rs"

[dependencies]
anyhow = "1.0"
bitcoin = { version = "0.30", features = [ "serde" ] }
bytes = "1"
futures-util = { version = "0.3", features = [ "sink" ] }
hex = "0.4.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["net"]}
tokio-util = { version = "0.7", features = ["codec"] }

[dev-dependencies]
env_logger = "0.10"
tokio = { version = "1", features = ["net", "macros", "rt-multi-thread"]}
tokio-test = "0.4.3"
