[package]
name = "cln-plugin"
version = "0.1.6"
edition = "2021"
license = "MIT"
description = "A CLN plugin library. Write your plugin in Rust."
homepage = "https://github.com/ElementsProject/lightning/tree/master/plugins"
repository = "https://github.com/ElementsProject/lightning"
documentation = "https://docs.rs/cln-plugin"

[[example]]
name = "cln-plugin-startup"
path = "examples/cln-plugin-startup.rs"

[dependencies]
anyhow = "1.0.51"
bytes = "1.1.0"
log = { version = "0.4.14", features = ['std'] }
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.72"
tokio-util = { version = "0.7", features = ["codec"] }
tokio = { version="1", features = ['io-std', 'rt', 'sync', 'macros', 'io-util'] }
tokio-stream = "0.1"
futures = "0.3"
env_logger = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", ] }
cln-grpc = { path = "../cln-grpc" }
