[project]
name = "cln-tracer"
version = "0.1.0"
description = ""
authors = [
    {name = "Christian Decker", email = "decker.christian@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8,<4.0"
dependencies = [
    "bcc>=0.1.10",
    "opentelemetry-proto>=1.21.0"
]

[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"
