[project]
name = "msggen"
version = "0.1.0"
description = "A utility to transform wire messages and JSON-RPC messages to arbitrary target languages."
authors = [{ name = "Christian Decker", email = "decker@blockstream.com" }]
license = { text = "BSD-MIT" }
requires-python = ">=3.6,<4.0"
dependencies = []

[dependency-groups]
dev = ["pytest>=6.2.5"]

[project.scripts]
msggen = "msggen.__main__:main"

[tool.hatch.build.targets.wheel]
include = ["msggen/schema.json"]


[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"
