[tool.poetry]
name = "pyln-client"
version = "24.11rc1"
description = "Client library and plugin library for Core Lightning"
authors = ["Christian Decker <decker.christian@gmail.com>"]
license = "BSD-MIT"
readme = "README.md"

packages = [
  { include = "pyln/client" },
]

[tool.poetry.dependencies]
python = "^3.8"
pyln-proto = ">=23"
pyln-bolt7 = ">=1.0"

[tool.poetry.dev-dependencies]
pytest = "^7"
pyln-bolt7 = { path = "../pyln-spec/bolt7", develop = true }
pyln-proto = { path = "../pyln-proto", develop = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
