[project]
name = "pyln-grpc-proto"
version = "25.09"
description = "The compiled GRPC proto for CLN"
authors = [{ name = "Christian Decker", email = "decker@blockstream.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = ["grpcio==1.75.1", "protobuf==6.32.1"]

[dependency-groups]
dev = ["grpcio==1.75.1", "mypy-protobuf<4", "grpcio-tools==1.75.1"]

[tool.hatch.build.targets.wheel]
packages = ["pyln"]

[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"
