[project]
name = "pyln-proto"
version = "v25.12"
description = "This package implements some of the Lightning Network protocol in pure python. It is intended for protocol testing and some minor tooling only. It is not deemed secure enough to handle any amount of real funds (you have been warned!)."
authors = [
    {name = "Christian Decker", email = "decker.christian@gmail.com"}
]
license = {text = "BSD-MIT"}
readme = "README.md"
requires-python = ">=3.9.2,<4.0"
dependencies = [
    "base58>=2.1.1",
    "bitstring>=4.3.0",
    "coincurve",
    "cryptography>=46",
    "PySocks>=1"
]

[dependency-groups]
dev = [
  "pytest>=8.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["pyln"]

[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"

[tool.uv.sources]
coincurve = { git = "https://github.com/ofek/coincurve", rev = "435d4a22f6e104712016064bf8373a29593cccd2" }
