[project]
name = "pyln-proto"
version = "26.06.3"
description = "This package implements some of the Lightning Network protocol in pure python. It is intended for protocol testing and some minor tooling only. It is not deemed secure enough to handle any amount of real funds (you have been warned!)."
authors = [
    {name = "Christian Decker", email = "decker.christian@gmail.com"}
]
license = {text = "BSD-MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "base58>=2.1.1",
    "bitstring>=4.3.0",
    "coincurve>=21",
    "cryptography>=46",
    "PySocks>=1"
]

[[tool.uv.index]]
name = "coincurve-cp314-fix"
url = "https://daywalker90.github.io/coincurve/"
explicit = true

[tool.uv.sources]
coincurve = [
  { index = "coincurve-cp314-fix", marker = "python_version == '3.14'" },
]

[dependency-groups]
dev = [
  "pytest>=8.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["pyln"]

[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"
