[tool.poetry]
name = "pyln-testing"
version = "23.11.1"
description = "Test your Core Lightning integration, plugins or whatever you want"
authors = ["Christian Decker <decker.christian@gmail.com>"]
license = "BSD-MIT"
readme = "README.md"

packages = [
  { include = "pyln/testing" },
]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7"
ephemeral-port-reserve = "^1.1.4"
psycopg2-binary = "^2.9"
python-bitcoinlib = "^0.11.0"
jsonschema = "^4.4.0"
pyln-client = ">=23"
Flask = "^2"
cheroot = "^8"
psutil = "^5.9"
requests = "^2.31.0"

grpcio = { version = "^1", optional = true }
pyln-grpc-proto = { version = "^0.1", optional = true }

[tool.poetry.dev-dependencies]
pyln-client = { path = "../pyln-client", develop = true}
pyln-grpc-proto = { path = "../pyln-grpc-proto", develop = true, optional = true}

[tool.poetry.extras]
grpc = ["pyln-grpc-proto", "grpcio"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
